Add HTML and style in CSS

--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="main.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
+
+
     <title>Module 5 Homework</title>
   </head>
 
   <body>
     <header>
-      <h1></h1>
+      <h1>BOX<br> CHALLENGE</h1>
     </header>
 
     <main>
       <section>
-        <h2></h2>
+        <h2>TEST YOUR LUCK. CHOOSE A BOX. WIN A PRIZE.</h2>
       </section>
 
-      <section>
-      </section>
+      <section class="container">
+      <div class="box1">
+        1
+      </div>
 
-      <section>
-      </section>
+      <div class="box2">
+      2
+      </div>
 
-      <section>
+      <div class="box3"> 3
+      </div>
       </section>
 
     </main>
