--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
       </section>
 
       <section class="container">
-      <div class="box1">
+      <div class="box1" id="bgcolor">
         1
       </div>
 
-      <div class="box2">
-      2
+      <div class="box2" id="bgcolor">
+        2
       </div>
 
-      <div class="box3"> 3
+      <div class="box3" id="bgcolor">
+        3
       </div>
       </section>
 
     </main>
 
 
-    <script src="main.js"</script>
+    <script src="main.js"></script>
   </body>
 </html>
