Add inner HTML to boxes when clicked

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       </section>
 
       <section class="container">
-      <div class="box1" id="bgcolor">
+      <div id="box1" class="bgcolor">
         1
       </div>
 
-      <div class="box2" id="bgcolor">
+      <div id="box2" class="bgcolor">
         2
       </div>
 
-      <div class="box3" id="bgcolor">
+      <div id="box3" class="bgcolor">
         3
       </div>
       </section>
