Change bg color on hover

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <h2>TEST YOUR LUCK. CHOOSE A BOX. WIN A PRIZE.</h2>
       </section>
 
+      <section>
+        <button>
+          <href="#">
+          Start Over
+        </button>
+      </section>
+
       <section class="container">
       <div id="box1" class="bgcolor">
         1
