Display button on click of boxes

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         <h2>TEST YOUR LUCK. CHOOSE A BOX. WIN A PRIZE.</h2>
       </section>
 
-      <section>
-        <button>
+        <button id = "button">
           <href="#">
           Start Over
         </button>
-      </section>
 
       <section class="container">
       <div id="box1" class="bgcolor">
